# SO-SimuladorVonNeumann

./: CMakeLists.txt  GUIA_COMPARACAO_CORES.md  GUIA_COMPARACAO_POLITICAS.md  GUIA_METRICAS.md  MAKEFILE_COMMANDS.md  MakeFile  RESULTADOS_20_PROCESSOS.md  RESULTADOS_TESTES.md  RESUMO_EXECUTIVO.md  RESUMO_METRICAS_COMPLETO.md  copilar.md  gerar_resultados.sh
processes/: process1.json  process10.json  process11.json  process12.json  process13.json  process14.json  process15.json  process16.json  process17.json  process18.json  process19.json  process2.json  process20.json  process3.json  process4.json  process5.json  process6.json  process7.json  process8.json  process9.json
src/: main.cpp
src/IO/: IOManager.cpp  IOManager.hpp
src/cpu/: CONTROL_UNIT.cpp  CONTROL_UNIT.hpp  PCB.hpp  pcb_loader.cpp
src/memory/: MemoryManager.cpp  MemoryManager.hpp  cache.cpp  cache.hpp  constants.hpp
src/metrics/: Metrics.hpp  MetricsExtended.hpp  TemporalMetrics.hpp
src/multicore/: Core.cpp  Core.hpp  MultiCore.cpp  MultiCore.hpp  Scheduler.cpp  Scheduler.hpp
src/test/: run_all_priority_tests.cpp  test_edge_cases.cpp  test_integration_complete.cpp  test_io_detailed.cpp  test_memory_critical.cpp  test_metrics.cpp  test_performance.cpp  test_pipeline_basic.cpp  test_scheduler_priority.cpp  test_stress.cpp
